--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
-
-    <!-- Create an iframe tag-->
+    <iframe
+      src="https://maps.app.goo.gl/bAm1KxCk3KUHDaHw6"
+      width="100%"
+      height="400px"
+      frameborder="1"
+    ></iframe>
 
   </body>
 </html>
